--- a/Source/WPF/MyMoney/Views/FlowDocumentView.xaml
+++ b/Source/WPF/MyMoney/Views/FlowDocumentView.xaml
@@ -7,6 +7,7 @@
              xmlns:c="clr-namespace:Walkabout.Controls"             
              xmlns:u="clr-namespace:Walkabout.Utilities"
              mc:Ignorable="d" 
+             u:WpfAnnotations.CodeRef="NuclearTreeViewItemToggleButton"
              d:DesignHeight="400" d:DesignWidth="600">
     <Grid x:Name="Grid">
 
@@ -75,17 +76,16 @@
                         FontWeight="{Binding FontWeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:FlowDocumentView}}}"
                         FontStyle="{Binding FontStyle, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:FlowDocumentView}}}" 
                         PagePadding="10"                                
-                        Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
-                        u:WpfAnnotations.CodeRef="Table, TableCell, RowHeaderStyle, RowFooterStyle, ReportHeadingStyle, ReportSubHeadingStyle, NumericStyle" 
+                        Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"      
+                        u:WpfAnnotations.CodeRef="RowHeaderStyle, RowFooterStyle, ReportHeadingStyle, ReportSubHeadingStyle, NumericStyle"
+                
                  >
                 <FlowDocument.Resources>
                     <Style TargetType="{x:Type Table}">
-                        <Setter Property="BorderBrush" Value="{DynamicResource ReportTableBorder}"/>
                         <Setter Property="BorderThickness" Value="0"/>
                         <Setter Property="CellSpacing" Value="0"/>
                     </Style>
                     <Style TargetType="{x:Type TableCell}">
-                        <Setter Property="BorderBrush" Value="{DynamicResource ReportTableBorder}"/>
                         <Setter Property="BorderThickness" Value="0"/>
                         <Setter Property="Padding" Value="2"/>
                     </Style>
@@ -107,7 +107,6 @@
                         <Setter Property="Foreground" Value="{DynamicResource ReportSubHeadingForeground}"/>
                         <Setter Property="FontSize" Value="16"/>
                     </Style>
-                    
                     <Style x:Key="NumericStyle" TargetType="{x:Type Paragraph}">
                         <Setter Property="TextAlignment" Value="Right"/>
                     </Style>
