--- a/Source/WPF/MyMoney/Views/LoansView.xaml
+++ b/Source/WPF/MyMoney/Views/LoansView.xaml
@@ -9,6 +9,7 @@
     xmlns:local="clr-namespace:Walkabout.Controls"
     xmlns:views="clr-namespace:Walkabout.Views"
     xmlns:help="clr-namespace:Walkabout.Help"   
+    xmlns:u="clr-namespace:Walkabout.Utilities"   
     help:HelpService.HelpKeyword="Loans"
     mc:Ignorable="d" 
     d:DesignHeight="300" d:DesignWidth="700">
